tests/compile-fail/derive-partial-eq.stderr
error: can't use `#[derivative(PartialEq)]` on an enumeration without `feature_allow_slow_enum`; see the documentation for more details
 --> $DIR/derive-partial-eq.rs:7:1
  |
7 | #[derivative(PartialEq)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
